minikube/bootstrap/zipkin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zipkin
  labels:
    app: zipkin
spec:
  serviceName: zipkin
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      name: zipkin
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          imagePullPolicy: Always
          ports:
            - containerPort: 9411
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
      restartPolicy: Always
